# codex-oauth-cli

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  client.rs  main.rs  templates.rs
