[package]
name = "codex-oauth-cli"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust wrapper that reuses the local Codex login session"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "=0.21.7"
chrono = { version = "=0.4.31", default-features = false, features = ["clock"] }
rand = "=0.8.5"
indexmap = "=2.2.6"
reqwest = { version = "=0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
sha2 = "=0.10.8"
url = "=2.4.1"
